--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
-.vs/
+/MipmapGen/.vs/MipmapGen/
+/MipmapGen/build/
+/MipmapGen/.vs/slnx.sqlite
+/MipmapGen/.vs/CMake Overview
+.vs/VSWorkspaceState.json
 out/
