--- a/MipmapGen/CMakeLists.txt
+++ b/MipmapGen/CMakeLists.txt
@@ -2,19 +2,20 @@ cmake_minimum_required(VERSION 3.16)
 
 project(MipmapGen LANGUAGES CXX)
 
-#  add_library(lodepng STATIC 
-#                      lodepng/lodepng.cpp
+#add_library(lodePng   lodepng/lodepng.cpp
 #                      lodepng/lodepng.h
 #                      lodepng/lodepng_util.cpp
 #                      lodepng/lodepng_util.h)
+
+#target_compile_features(lodePng PUBLIC cxx_std_11)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 
 add_executable(MipmapGen main.cpp)
 
-target_compile_features(MipmapGen PUBLIC cxx_std_11)
+target_compile_features(MipmapGen PUBLIC cxx_std_17)
 
 target_include_directories(MipmapGen PUBLIC include)
 
-# target_link_libraries(MipmapGen PUBLIC lodepng)
+#target_link_libraries(MipmapGen PUBLIC lodePng)
